--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "api"
   ],
   "author": "choirul-umam",
+  "publishConfig": {
+    "@callmeumm:registry": "https://npm.pkg.github.com"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
