--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mousegram",
   "version": "0.0.1",
   "description": "",
-  "main": "lib/index.js",
+  "main": "bin/index.js",
   "scripts": {
     "build": "./node_modules/typescript/bin/tsc --build",
     "dev": "nodemon .test/test.ts",
