--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bot",
     "api"
   ],
-  "author": "choirul-umam",
+  "author": "callmeumm",
   "publishConfig": {
     "@callmeumm:registry": "https://npm.pkg.github.com"
   },
